# chatter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  design-plan.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  render.yaml
.claude/: launch.json
accounts/: adapter.py  context_processors.py  emails.py  forms.py  middleware.py  models.py  signals.py  tests.py  tokens.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_follow_follow_unique_follow_follow_no_self_follow.py  0002_profile_timezone.py  0003_mute_block.py  0003_profile_avatar.py  0004_notification_preferences.py  0004_profile_email_verified.py  0005_backfill_email_verified.py  0005_profile_notify_on_reposts.py  0006_profile_pinned_post.py
accounts/templatetags/: avatar_extras.py  user_extras.py
config/: settings.py  urls.py
games/: admin.py  context_processors.py  models.py  stats.py  tests.py  urls.py  views.py
games/logic/: backgammon.py  battleship.py  checkers.py  connect_four.py  hangman.py  mastermind.py  nim.py  nine_mens_morris.py  othello.py  rock_paper_scissors.py  stratego.py  tic_tac_toe.py  wordle.py
posts/: admin.py  context_processors.py  forms.py  hashtags.py  markdown.py  mentions.py  models.py  ranking.py  signals.py  tests.py  urls.py  views.py
scripts/: build-test.sh
simulations/: registry.py  tests.py  urls.py  views.py
static/css/: input.css  (+1 more)
templates/: _avatar.html  _comment_reactions.html  _comment_vote.html  _footer.html  _header.html  _post_reactions.html  _post_vote.html  _repost_button.html  _save_button.html  base.html
(+113 files in other folders)
